# unholy-force

./: AGENTS.md  Cargo.toml  README.md
assets/: main_menu_atlas.json  main_menu_atlas.json5  main_menu_bindings.json5  main_menu_layout.json  main_menu_layout.json5  sprite_atlas.json5
assetsrc/: main_menu.aseprite  main_menu_atlas.aseprite  sprites.aseprite  ui.aseprite  ui_elements.aseprite
design/: FLOOR_GENERATION.md
src/: app_stage.rs  assets.rs  errors.rs  graphics.rs  main.rs  main_menu_stage.rs  screen_utils.rs
src/app/: app_stage.rs  editor_stage.rs  main_menu_stage.rs  mod.rs
src/app/editor_stage/: effect_config_editor.rs  floor_config_editor.rs  floor_flow_graph_config_editor.rs  floor_part_adjacency_config_editor.rs  floor_part_editor.rs  image_widgets.rs  item_config_editor.rs  parameter_config_editor.rs  reusable_image_widget.rs  tag_config_editor.rs  unit_config_editor.rs  widgets.rs
src/app/editor_stage/text_completion/: mod.rs  trie.rs
src/app/game_stage/: floor_generator.rs  grid_math.rs  mod.rs
src/effect_mechanics/: mod.rs  nodes.rs
src/effect_mechanics/nodes/: add_tag.rs  branch.rs  join.rs  spawn_sub_effect.rs  terminator.rs  wait_cond.rs  wait_ticks.rs
src/game_config/: DESIGN.md  effects.rs  floor_flow_graph.rs  floor_part_adjacency.rs  floor_parts.rs  floors.rs  items.rs  mod.rs  parameters.rs  units.rs
