[package]
name = "unholy-force"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = "0.4.14"
serde = { version =  "1.0.228", features = ["derive"] }
json5 = { version = "1.3.1" }
lazy_static = "1.5.0"
webbrowser = "1.2.1"
egui-macroquad = "0.17.3"
egui = "0.31.1"
uuid = { version = "1.23.1", features = ["serde"] }
rand = "0.10.1"
hecs = "0.11.0"
bumpalo = { version = "3.20.2", features = ["collections"] }
egui-snarl = { version = "0.7.1", features = ["serde"] }
simple-tiled-wfc = "0.7.7"
bitsetium = "0.0.2"
egui_code_editor = { git = "https://github.com/p4ymak/egui_code_editor", rev = "1566784e20e6ef5e6ebf4004f4972e164d240ebf" }